// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UnairedContentCard should match snapshot with full data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Unaired Content Awaiting Release
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-jruvrt-MuiSvgIcon-root"
              data-testid="TvIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-1a9zl4x-MuiTypography-root"
            >
              5
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Shows
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1b3y9wp-MuiSvgIcon-root"
              data-testid="VideoLibraryIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m-8 12.5v-9l6 4.5z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-g2glig-MuiTypography-root"
            >
              12
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Seasons
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vm068k-MuiSvgIcon-root"
              data-testid="TvIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-rxltmw-MuiTypography-root"
            >
              45
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Episodes
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1aczwaa-MuiSvgIcon-root"
              data-testid="MovieIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 4 2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-18ialae-MuiTypography-root"
            >
              8
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Movies
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16j30i3"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              You're tracking 
              70
               pieces of content awaiting release
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UnairedContentCard should match snapshot with mixed zero and non-zero values 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Unaired Content Awaiting Release
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-jruvrt-MuiSvgIcon-root"
              data-testid="TvIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-1a9zl4x-MuiTypography-root"
            >
              0
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Shows
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1b3y9wp-MuiSvgIcon-root"
              data-testid="VideoLibraryIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m-8 12.5v-9l6 4.5z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-g2glig-MuiTypography-root"
            >
              5
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Seasons
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vm068k-MuiSvgIcon-root"
              data-testid="TvIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-rxltmw-MuiTypography-root"
            >
              0
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Episodes
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 MuiGrid-grid-md-3 css-19vcg0t-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1pbuioz"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1aczwaa-MuiSvgIcon-root"
              data-testid="MovieIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 4 2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4z"
              />
            </svg>
            <h4
              class="MuiTypography-root MuiTypography-h4 css-18ialae-MuiTypography-root"
            >
              3
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Movies
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16j30i3"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              You're tracking 
              8
               pieces of content awaiting release
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UnairedContentCard should match snapshot with null data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Unaired Content
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-2iyr4a-MuiTypography-root"
      >
        No data available
      </p>
    </div>
  </div>
</div>
`;

exports[`UnairedContentCard should match snapshot with zero content 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Unaired Content Awaiting Release
      </h6>
      <div
        class="MuiBox-root css-8ptgxe"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-k16oju-MuiTypography-root"
        >
          All content has aired - nothing to wait for!
        </p>
      </div>
    </div>
  </div>
</div>
`;
